# C-Game

./: .gitignore  .sconsign.dblite  CMakeLists.txt  README.txt
Games 2/Settings/: Guide.cpp
Games/Entities/: Animation.h  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  EnemySpawner.cpp  EnemySpawner.h  Entity.cpp  Entity.h  Missile.h  Movables.h  Player.cpp  Player.h  Player_w.cpp  Player_w.h  Tile.cpp  Tile.h
Games/Scenes/: Basement.cpp  Basement.h  FirstScenes.cpp  FirstScenes.h  Level1.cpp  Level1.h  MainMenu.cpp  MainMenu.h  WinScene.cpp  WinScene.h  deleted.cpp
Games/Settings/: Base.cpp  Base.h  Explain.txt  Guide.cpp  Guide.h  Options.cpp  Options.h  Setting.cpp  Setting.h
UI/: AnimatedGIF.cpp  AnimatedGIF.h  Button.cpp  Button.h  ClickableIcon.cpp  ClickableIcon.h  Collectible.cpp  Collectible.h  HealthBar.cpp  Healthbar.h  InventoryPanel.cpp  InventoryPanel.h  Message.cpp  Message.h  Music.cpp  Music.h  interactable_obj.cpp  interactable_obj.h
assets/textures/: Setting.cpp
include/: Game.h  GameState.h  MainMenu.h
src/: Config.h  Constant.h  Game.cpp  GameState.cpp  MainMenu.cpp  main.cpp  my_game
src/my_game.dSYM/Contents/: Info.plist
src/my_game.dSYM/Contents/Resources/DWARF/: my_game
src/my_game.dSYM/Contents/Resources/Relocations/aarch64/: my_game.yml
src/my_game.dSYM/Contents/Resources/Relocations/x86_64/: my_game.yml
